--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!------------------ Bootstrap------------------->
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <!----------------- custom css ---------------->
+    <link rel="stylesheet" href="style.css">
     <title>Panda Commerce</title>
 </head>
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light container">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-light container fixed-top">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
                 </a>
@@ -28,13 +30,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="#">Shoes</a>
+                            <a class="nav-link " href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="#">Backpack</a>
+                            <a class="nav-link " href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="#">Subscribe</a>
+                            <a class="nav-link " href="#subscribe">Subscribe</a>
                         </li>
 
 
@@ -44,10 +46,10 @@
             </div>
         </nav>
         <!-------------------- Sliders Start ------------------ -->
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleControls " class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="row bg-info p-4">
+                    <div class="row panda-bg-info p-4">
                         <div class="col-lg-7 d-flex justify-content-items align-items-center">
                             <div>
                                 <h2>Mega LCD TV For Sports</h2>
@@ -55,7 +57,7 @@
                                     tv.
                                 </p>
                                 <h2>$1200</h2>
-                                <button class="btn btn-warning">Buy Now
+                                <button class="btn panda-btn-warning">Buy Now
                                 </button>
                             </div>
 
@@ -66,7 +68,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <div class="row bg-info p-4">
+                    <div class="row panda-bg-info p-4">
                         <div class="col-lg-7 d-flex justify-content-items align-items-center">
                             <div>
                                 <h2>Cool Dude Headphone</h2>
@@ -75,7 +77,7 @@
                                     Fanky world.
                                 </p>
                                 <h2>$420</h2>
-                                <button class="btn btn-warning">Buy Now
+                                <button class="btn panda-btn-warning">Buy Now >>
                                 </button>
                             </div>
 
@@ -86,7 +88,7 @@
                     </div>
                 </div>
                 <div class="carousel-item p-4">
-                    <div class="row bg-info">
+                    <div class="row panda-bg-info">
                         <div class="col-lg-7 d-flex justify-content-items align-items-center">
                             <div>
                                 <h2>X-BOX for your living room</h2>
@@ -94,7 +96,7 @@
                                     fake Sports.
                                 </p>
                                 <h2>$600</h2>
-                                <button class="btn btn-warning">Buy Now
+                                <button class="btn panda-btn-warning">Buy Now >>
                                 </button>
                             </div>
 
@@ -120,31 +122,33 @@
     </header>
     <main>
         <!-- ================== Banner ================= -->
-        <div class="container px-4 text-center my-5">
-            <div class="row gx-5">
-                <div class="col-lg-4 col-sm-12 col-12 col-md-6">
-                    <div class="p-3 border rounded-5 d-flex justify-content-items align-items-center bg-success">
-                        <h1>Watch</h1>
-                        <img src="images/categories/watch.png" alt="">
+        <section>
+            <div class="container px-4 text-center my-5">
+                <div class="row gx-5 categories">
+                    <div class="col-lg-4 col-sm-12 col-12 col-md-6">
+                        <div class="p-3 border rounded-5 d-flex justify-content-items align-items-center bg-yellow">
+                            <h1 class="pe-5">Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-12 col-md-6 ">
+                        <div class="p-3 border rounded-5 d-flex justify-content-items align-items-center bg-pink">
+                            <h1 class="pe-5">Bag</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-12 col-12 col-md-6">
+                        <div class="p-3 border rounded-5 d-flex justify-content-items align-items-center bg-blue">
+                            <h1 class="pe-5">Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 col-12 col-md-6 ">
-                    <div class="p-3 border rounded-5 d-flex justify-content-items align-items-center bg-primary">
-                        <h1>Bag</h1>
-                        <img src="images/categories/bag.png" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-12 col-12 col-md-6">
-                    <div class="p-3 border rounded-5 d-flex justify-content-items align-items-center bg-info">
-                        <h1>Shoes</h1>
-                        <img src="images/categories/shoes.png" alt="">
-                    </div>
-                </div>
-            </div>
 
-        </div>
+            </div>
+        </section>
         <!--================= SHOES ================ -->
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h1>Shoes</h1>
             <div class=" row row-cols-md-2 row-cols-sm-1 row-cols-1 row-cols-lg-3">
                 <div class="col g-5">
@@ -156,7 +160,7 @@
                                 to
                                 additional.</p>
                             <h5>$ 120</h5>
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn-warning">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -169,7 +173,7 @@
                                 content.
                             </p>
                             <h5>$ 360</h5>
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn-warning">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -181,7 +185,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional.</p>
                             <h5>$ 350</h5>
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn-warning">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -189,7 +193,7 @@
 
         </section>
         <!--================= Bags ============== -->
-        <section class="container my-5">
+        <section class="container my-5 " id="backpack">
             <h1>Backpack</h1>
 
             <div class=" row row-cols-md-2 row-cols-sm-1 row-cols-1 row-cols-lg-3">
@@ -203,7 +207,7 @@
                                 lead-in to
                                 additional content. This content is a little bit longer.</p>
 
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn-warning">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -218,7 +222,7 @@
                                 content.
                             </p>
 
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn-warning">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -234,7 +238,7 @@
                                 equal
                                 height action.</p>
 
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn-warning">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -242,8 +246,27 @@
 
 
         </section>
+        <!--====================== subscribe ===================== -->
+        <section style="height: 300px;"
+            class="container d-flex justify-content-center align-items-center panda-bg-info rounded-3 mb-5"
+            id="subscribe">
 
+            <form>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p class="text-muted fw-bolder">Get updates on sales, specials and more</p>
+                <div class="mb-1">
 
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+                </div>
+
+                <button type="submit" class="btn panda-btn-warning">Submit</button>
+            </form>
+        </section>
+        <!-- =================== Footer ================= -->
+        <footer class="text-muted text-center">
+            <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+        </footer>
     </main>
 
 
